# Chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Game.cpp  main.cpp
board/: Board.cpp  Board.h
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
utility/: utility.cpp  utility.h
